--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
+        "livewire/livewire": "^2.12",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "2.0",
         "spatie/laravel-activitylog": "^4.0",
@@ -38,14 +39,15 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.9",
-        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
+        "kitloong/laravel-migrations-generator": "^6.11",
         "laravel/breeze": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.3.3",
-        "roave/security-advisories": "dev-latest"
+        "roave/security-advisories": "dev-latest",
+        "spatie/laravel-ignition": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -77,6 +79,8 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:meta",
             "@php artisan package:discover --ansi"
         ],
         "post-root-package-install": [
