--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 _ide_helper.php
-_ide_helper_models.php
+_ide_helper_models.ph
 .phpstorm.meta.php
 testDiagram.drawio
 debug.log
@@ -22,3 +22,4 @@ settings.json
 /storage/*.key
 /.idea
 /.vscode
+_ide_helper_models.php
