--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,55 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/laravel",
+    "name": "cst/ciptaberkahsinergi",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
+    "description": "App for koperasi ciptaberkahsinergi",
     "keywords": ["laravel", "framework"],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/CiptasolutindoTech/wa-laravel"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/CiptasolutindoTech/PPOBLibary"
+        }
+    ],
     "require": {
         "php": "^8.2",
+        "cst/ppob-laravel": "^1.0@alpha",
+        "cst/wa-laravel": "^1.3",
+        "elibyy/tcpdf-laravel": "^11.3",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/pulse": "^1.4",
+        "laravel/socialite": "^5.18",
+        "laravel/telescope": "^5.5",
+        "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^3.6",
+        "rap2hpoutre/fast-excel": "^5.6",
+        "spatie/laravel-activitylog": "^4.10",
+        "yajra/laravel-datatables-buttons": "^12.1",
+        "yajra/laravel-datatables-oracle": "^12.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.15",
+        "barryvdh/laravel-ide-helper": "^3.5",
         "fakerphp/faker": "^1.23",
+        "laravel/breeze": "^2.3",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.7",
-        "pestphp/pest-plugin-laravel": "^3.1"
+        "pestphp/pest-plugin-laravel": "^3.1",
+        "roave/security-advisories": "dev-latest",
+        "spatie/laravel-ignition": "^2.9"
     },
     "autoload": {
+        "files": [
+            "app/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
@@ -35,6 +64,8 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:meta",
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
@@ -67,6 +98,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
