feat(Sanctum): add personal access tokens migration and configuration

--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,14 @@
         "elibyy/tcpdf-laravel": "^11.3",
         "laravel/framework": "^12.0",
         "laravel/pulse": "^1.4",
+        "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.18",
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
         "rap2hpoutre/fast-excel": "^5.6",
         "spatie/laravel-activitylog": "^4.10",
+        "spatie/laravel-permission": "^6.16",
         "yajra/laravel-datatables-buttons": "^12.1",
         "yajra/laravel-datatables-oracle": "^12.0"
     },
