--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "rap2hpoutre/fast-excel": "^5.6",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.16",
+        "spatie/laravel-settings": "^3.4",
         "yajra/laravel-datatables-buttons": "^12.1",
         "yajra/laravel-datatables-oracle": "^12.0"
     },
