--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "php": "^8.2",
         "cst/ppob-laravel": "^1.0@alpha",
         "cst/wa-laravel": "^1.3",
+        "laravel-notification-channels/fcm":"*",
         "elibyy/tcpdf-laravel": "^11.3",
         "laravel/framework": "^12.0",
         "laravel/pulse": "^1.4",
