--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
+        "phpoffice/phpspreadsheet": "^4.1",
         "rap2hpoutre/fast-excel": "^5.6",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.16",
